# AI-EchoChamber

./: README.md
backend/: list_models.py  main.py  models.txt  pyproject.toml  requirements.txt  test_model.py  vercel.json
backend/app/: app.py  config.py  dependencies.py
backend/app/middleware/: rate_limit.py  security.py
backend/app/models/: requests.py  responses.py
backend/app/routers/: admin.py  auth.py  chatbot.py  contact.py  content.py  history.py  notifications.py  upload.py
backend/app/services/: ai_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: AuthModal.tsx
frontend/src/components/chatbot/: ChatWidget.tsx
frontend/src/components/contact/: ContactModal.tsx
frontend/src/components/content/: FormatSelector.tsx  GeneratedContent.tsx  GenerationHistory.tsx  HistoryEntryCard.tsx  VideoUploader.tsx  VoiceExamples.tsx
frontend/src/components/landing/: CTASection.tsx  FeaturesGrid.tsx  HeroSection.tsx  HowItWorks.tsx
frontend/src/components/layout/: FlowingParticles.tsx  Footer.tsx  Navbar.tsx
frontend/src/context/: AuthContext.tsx  ContactContext.tsx  ThemeContext.tsx
frontend/src/pages/: CreatePage.tsx  HomePage.tsx  HowItWorksPage.tsx  ResetPasswordPage.tsx
frontend/src/services/: api.ts  supabase.ts
frontend/src/types/: index.ts
